--- a/terraform/Makefile
+++ b/terraform/Makefile
@@ -1,11 +1,5 @@
 plan:
-	terraform plan -var-file=env.json -var="environment=dev"
+	terraform plan -var-file=env.json
 
 apply:
-	terraform apply -var-file=env.json -var="environment=dev"
-
-plan_prod:
-	terraform plan -var-file=env.json -var="environment=prod"
-
-apply_prod:
-	terraform apply -var-file=env.json -var="environment=prod"
+	terraform apply -var-file=env.json
