--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,19 +9,19 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
+    env:
+      AWS_REGION: eu-west-1
+      REPO_ROOT: 387546586013.dkr.ecr.eu-west-1.amazonaws.com
+      REPO_URI: 387546586013.dkr.ecr.eu-west-1.amazonaws.com/course-management
+      ENVIRONMENT: dev
+
     steps:
     - name: Prepare tags and repository info
       id: prep
       run: |
         DATE=$(date +'%Y%m%d-%H%M%S')
         SHORT_SHA=$(echo ${{ github.sha }} | cut -c 1-7)
-        REGION=eu-west-1
-        REPO_ROOT=387546586013.dkr.ecr.${REGION}.amazonaws.com
-
         echo "TAG=${DATE}-${SHORT_SHA}" >> $GITHUB_ENV
-        echo "REGION=${REGION}" >> $GITHUB_ENV
-        echo "REPO_ROOT=${REPO_ROOT}" >> $GITHUB_ENV
-        echo "REPO_URI=${REPO_ROOT}/course-management" >> $GITHUB_ENV
 
     - name: Checkout code
       uses: actions/checkout@v2
@@ -44,7 +44,7 @@ jobs:
 
     - name: Log in to Amazon ECR
       run: |
-        aws ecr get-login-password --region ${{ env.REGION }} | docker login --username AWS --password-stdin ${{ env.REPO_ROOT }}
+        aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.REPO_ROOT }}
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -59,4 +59,4 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: ${{ env.REGION }}
+        AWS_DEFAULT_REGION: ${{ env.AWS_REGION }}
