--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - '.github/**'
+      - '.vscode/**'
+      - 'deploy/**'
+      - 'terraform/**'
+      - 'db/**'
 
 jobs:
   build-and-deploy:
