weird discovery error - have to do it (not sure how to do it only for me)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
     "python.analysis.typeCheckingMode": "basic",
     "python.testing.pytestArgs": [
-        "-s"
+        "."
     ],
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.testing.pytestEnabled": true,
+    "terminal.integrated.env.windows": {
+        "PIPENV_IGNORE_VIRTUALENVS": "1",
+        "PATH": "C:\\Users\\alexe\\miniconda3\\envs\\py3-9-13\\Library\\bin;${env:PATH}"
+    }
 }
