--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "*"
 django-allauth = {extras = ["slack"], version = "*"}
 requests = "*"
+pyjwt = "*"
 dj-database-url = "*"
 whitenoise = "*"
 psycopg2-binary = "*"
