moving scores to pass to course, not project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,11 @@ dependencies = [
     "django-loginas",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
     "ipython",
     "pytest-django",
+    "pytest",
     "jupyter",
     "pandas",
     "tqdm",
