--- a/.envrc_template
+++ b/.envrc_template
@@ -3,3 +3,4 @@ export DJANGO_SECRET='secret'
 export SITE_ID=3
 export IS_LOCAL=1
 export AUTH_TOKEN='token'
+export NGROK_AUTHTOKEN='your_ngrok_authtoken_here'
