--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -2,8 +2,6 @@ name: Deploy Dev
 
 on:
   push:
-    branches:
-      - main
     paths-ignore:
       - '.github/**'
       - '.vscode/**'
@@ -13,22 +11,9 @@ on:
       - 'notebooks/**'
 
 jobs:
-  build-and-deploy:
+  test:
     runs-on: ubuntu-latest
-
-    env:
-      AWS_REGION: eu-west-1
-      REPO_ROOT: 387546586013.dkr.ecr.eu-west-1.amazonaws.com
-      REPO_URI: 387546586013.dkr.ecr.eu-west-1.amazonaws.com/course-management
-
     steps:
-    - name: Prepare tags and repository info
-      id: prep
-      run: |
-        DATE=$(date +'%Y%m%d-%H%M%S')
-        SHORT_SHA=$(echo ${{ github.sha }} | cut -c 1-7)
-        echo "TAG=${DATE}-${SHORT_SHA}" >> $GITHUB_ENV
-
     - name: Checkout code
       uses: actions/checkout@v4
 
@@ -44,6 +29,32 @@ jobs:
 
     - name: Run tests
       run: make tests
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/main'
+
+    env:
+      AWS_REGION: eu-west-1
+      REPO_ROOT: 387546586013.dkr.ecr.eu-west-1.amazonaws.com
+      REPO_URI: 387546586013.dkr.ecr.eu-west-1.amazonaws.com/course-management
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Prepare tags and repository info
+      id: prep
+      run: |
+        DATE=$(date +'%Y%m%d-%H%M%S')
+        SHORT_SHA=$(echo ${{ github.sha }} | cut -c 1-7)
+        echo "TAG=${DATE}-${SHORT_SHA}" >> $GITHUB_ENV
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.13.5'
 
     - name: Build Docker image
       run: docker build -t course_management:${{ env.TAG }} .
