Add .claude directory and markdown files to deploy paths

--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -9,7 +9,9 @@ on:
       - 'terraform/**'
       - 'db/**'
       - 'notebooks/**'
+      - '.claude/**'
       - '.prod-versions'
+      - '*.md'
 
 jobs:
   test:
