--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -60,7 +60,7 @@ jobs:
         python-version: '3.13.5'
 
     - name: Build Docker image
-      run: docker build -t course_management:${{ env.TAG }} .
+      run: DOCKER_BUILDKIT=0 docker build -t course_management:${{ env.TAG }} .
 
     - name: Log in to Amazon ECR
       run: |
